Processamento de linguagens e Compiladores/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Decls
Rule 2     Programa -> Atrib
Rule 3     Programa -> Decls Corpo
Rule 4     Programa -> Atrib Corpo
Rule 5     Programa -> Corpo
Rule 6     Corpo -> Codigo
Rule 7     Codigo -> Proc Codigo
Rule 8     Codigo -> Decls Codigo
Rule 9     Codigo -> Atrib Codigo
Rule 10    Codigo -> COMENTARIO Codigo
Rule 11    Codigo -> Proc
Rule 12    Codigo -> Atrib
Rule 13    Codigo -> Decls
Rule 14    Codigo -> COMENTARIO
Rule 15    Decls -> Decl PONTOVIRGULA
Rule 16    Decls -> Decl VIRGULA Decls
Rule 17    expr -> exprArit
Rule 18    expr -> exprRel
Rule 19    Proc -> IF
Rule 20    Proc -> WHILE
Rule 21    Proc -> PRINTAR
Rule 22    Decl -> INT ID
Rule 23    Atrib -> INT ID IGUAL expr PONTOVIRGULA
Rule 24    Atrib -> ID IGUAL expr PONTOVIRGULA
Rule 25    Atrib -> ALTERA ID IGUAL expr PONTOVIRGULA
Rule 26    expr -> NUM
Rule 27    expr -> ID
Rule 28    expr -> INPUT
Rule 29    Decl -> LISTA INT NUM VIRGULA ID
Rule 30    Atrib -> ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
Rule 31    expr -> ID LPAREN_RETO expr RPAREN_RETO
Rule 32    Decl -> MATRIZ INT NUM NUM VIRGULA ID
Rule 33    Atrib -> ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
Rule 34    expr -> ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO
Rule 35    exprArit -> exprArit PLUS term
Rule 36    exprArit -> exprArit MINUS term
Rule 37    exprArit -> term
Rule 38    term -> term TIMES factor
Rule 39    term -> term DIVIDE factor
Rule 40    term -> factor
Rule 41    factor -> NUM
Rule 42    factor -> ID
Rule 43    exprRel -> expr IGUALIGUAL expr
Rule 44    exprRel -> expr DIFERENTE expr
Rule 45    exprRel -> expr MENOR expr
Rule 46    exprRel -> expr MENOROUIGUAL expr
Rule 47    exprRel -> expr MAIOR expr
Rule 48    exprRel -> expr MAIOROUIGUAL expr
Rule 49    exprRel -> expr EE expr
Rule 50    exprRel -> expr OU expr
Rule 51    IF -> SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
Rule 52    IF -> SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
Rule 53    WHILE -> ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
Rule 54    PRINTAR -> IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
Rule 55    PRINTAR -> IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
Rule 56    COMENTARIO -> COMENTADO

Terminals, with rules where they appear

ALTERA               : 25 30 33
COMENTADO            : 56
DIFERENTE            : 44
DIVIDE               : 39
EE                   : 49
ENQUANTO             : 53
ENTAO                : 51 52
FAZ                  : 53
FIM_COND             : 51 52
FIM_ENQUANTO         : 53
FRASE                : 54
ID                   : 22 23 24 25 27 29 30 31 32 33 34 42 55
IGUAL                : 23 24 25 30 33
IGUALIGUAL           : 43
IMPRIMIR             : 54 55
INPUT                : 28
INT                  : 22 23 29 32
LISTA                : 29
LPAREN               : 51 52 53 54 55
LPAREN_RETO          : 30 31 33 33 34 34
MAIOR                : 47
MAIOROUIGUAL         : 48
MATRIZ               : 32
MENOR                : 45
MENOROUIGUAL         : 46
MINUS                : 36
NUM                  : 26 29 32 32 41
OU                   : 50
PLUS                 : 35
PONTOVIRGULA         : 15 23 24 25 30 33 51 52 53 54 55
RPAREN               : 51 52 53 54 55
RPAREN_RETO          : 30 31 33 33 34 34
SE                   : 51 52
SENAO                : 52
TIMES                : 38
VIRGULA              : 16 29 32
error                : 

Nonterminals, with rules where they appear

Atrib                : 2 4 9 12
COMENTARIO           : 10 14
Codigo               : 6 7 8 9 10 51 52 52 53
Corpo                : 3 4 5
Decl                 : 15 16
Decls                : 1 3 8 13 16
IF                   : 19
PRINTAR              : 21
Proc                 : 7 11
Programa             : 0
WHILE                : 20
expr                 : 23 24 25 30 30 31 33 33 33 34 34 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50
exprArit             : 17 35 36
exprRel              : 18 51 52 53
factor               : 38 39 40
term                 : 35 36 37 38 39

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Decls
    (2) Programa -> . Atrib
    (3) Programa -> . Decls Corpo
    (4) Programa -> . Atrib Corpo
    (5) Programa -> . Corpo
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (33) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (6) Corpo -> . Codigo
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (32) Decl -> . MATRIZ INT NUM NUM VIRGULA ID
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (56) COMENTARIO -> . COMENTADO
    (51) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (52) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (53) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (54) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (55) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA

    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    LISTA           shift and go to state 10
    MATRIZ          shift and go to state 11
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20

    Programa                       shift and go to state 1
    Decls                          shift and go to state 2
    Atrib                          shift and go to state 3
    Corpo                          shift and go to state 4
    Decl                           shift and go to state 5
    Codigo                         shift and go to state 9
    Proc                           shift and go to state 12
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Decls .
    (3) Programa -> Decls . Corpo
    (8) Codigo -> Decls . Codigo
    (13) Codigo -> Decls .
    (6) Corpo -> . Codigo
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (33) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) COMENTARIO -> . COMENTADO
    (51) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (52) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (53) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (54) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (55) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (32) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

  ! reduce/reduce conflict for $end resolved using rule 1 (Programa -> Decls .)
    $end            reduce using rule 1 (Programa -> Decls .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 10
    MATRIZ          shift and go to state 11

  ! $end            [ reduce using rule 13 (Codigo -> Decls .) ]

    Decls                          shift and go to state 21
    Corpo                          shift and go to state 22
    Codigo                         shift and go to state 23
    Proc                           shift and go to state 12
    Atrib                          shift and go to state 24
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 3

    (2) Programa -> Atrib .
    (4) Programa -> Atrib . Corpo
    (9) Codigo -> Atrib . Codigo
    (12) Codigo -> Atrib .
    (6) Corpo -> . Codigo
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (33) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) COMENTARIO -> . COMENTADO
    (51) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (52) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (53) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (54) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (55) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (32) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

  ! reduce/reduce conflict for $end resolved using rule 2 (Programa -> Atrib .)
    $end            reduce using rule 2 (Programa -> Atrib .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 10
    MATRIZ          shift and go to state 11

  ! $end            [ reduce using rule 12 (Codigo -> Atrib .) ]

    Atrib                          shift and go to state 24
    Corpo                          shift and go to state 25
    Codigo                         shift and go to state 26
    Proc                           shift and go to state 12
    Decls                          shift and go to state 21
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 4

    (5) Programa -> Corpo .

    $end            reduce using rule 5 (Programa -> Corpo .)


state 5

    (15) Decls -> Decl . PONTOVIRGULA
    (16) Decls -> Decl . VIRGULA Decls

    PONTOVIRGULA    shift and go to state 27
    VIRGULA         shift and go to state 28


state 6

    (23) Atrib -> INT . ID IGUAL expr PONTOVIRGULA
    (22) Decl -> INT . ID

    ID              shift and go to state 29


state 7

    (24) Atrib -> ID . IGUAL expr PONTOVIRGULA

    IGUAL           shift and go to state 30


state 8

    (25) Atrib -> ALTERA . ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> ALTERA . ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (33) Atrib -> ALTERA . ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA

    ID              shift and go to state 31


state 9

    (6) Corpo -> Codigo .

    $end            reduce using rule 6 (Corpo -> Codigo .)


state 10

    (29) Decl -> LISTA . INT NUM VIRGULA ID

    INT             shift and go to state 32


state 11

    (32) Decl -> MATRIZ . INT NUM NUM VIRGULA ID

    INT             shift and go to state 33


state 12

    (7) Codigo -> Proc . Codigo
    (11) Codigo -> Proc .
    (7) Codigo -> . Proc Codigo
    (8) Codigo -> . Decls Codigo
    (9) Codigo -> . Atrib Codigo
    (10) Codigo -> . COMENTARIO Codigo
    (11) Codigo -> . Proc
    (12) Codigo -> . Atrib
    (13) Codigo -> . Decls
    (14) Codigo -> . COMENTARIO
    (19) Proc -> . IF
    (20) Proc -> . WHILE
    (21) Proc -> . PRINTAR
    (15) Decls -> . Decl PONTOVIRGULA
    (16) Decls -> . Decl VIRGULA Decls
    (23) Atrib -> . INT ID IGUAL expr PONTOVIRGULA
    (24) Atrib -> . ID IGUAL expr PONTOVIRGULA
    (25) Atrib -> . ALTERA ID IGUAL expr PONTOVIRGULA
    (30) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (33) Atrib -> . ALTERA ID LPAREN_RETO expr RPAREN_RETO LPAREN_RETO expr RPAREN_RETO IGUAL expr PONTOVIRGULA
    (56) COMENTARIO -> . COMENTADO
    (51) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo FIM_COND PONTOVIRGULA
    (52) IF -> . SE LPAREN exprRel RPAREN ENTAO Codigo SENAO Codigo FIM_COND PONTOVIRGULA
    (53) WHILE -> . ENQUANTO LPAREN exprRel RPAREN FAZ Codigo FIM_ENQUANTO PONTOVIRGULA
    (54) PRINTAR -> . IMPRIMIR LPAREN FRASE RPAREN PONTOVIRGULA
    (55) PRINTAR -> . IMPRIMIR LPAREN ID RPAREN PONTOVIRGULA
    (22) Decl -> . INT ID
    (29) Decl -> . LISTA INT NUM VIRGULA ID
    (32) Decl -> . MATRIZ INT NUM NUM VIRGULA ID

    $end            reduce using rule 11 (Codigo -> Proc .)
    FIM_COND        reduce using rule 11 (Codigo -> Proc .)
    SENAO           reduce using rule 11 (Codigo -> Proc .)
    FIM_ENQUANTO    reduce using rule 11 (Codigo -> Proc .)
    INT             shift and go to state 6
    ID              shift and go to state 7
    ALTERA          shift and go to state 8
    COMENTADO       shift and go to state 17
    SE              shift and go to state 18
    ENQUANTO        shift and go to state 19
    IMPRIMIR        shift and go to state 20
    LISTA           shift and go to state 10
    MATRIZ          shift and go to state 11

    Proc                           shift and go to state 12
    Codigo                         shift and go to state 34
    Decls                          shift and go to state 21
    Atrib                          shift and go to state 24
    COMENTARIO                     shift and go to state 13
    IF                             shift and go to state 14
    WHILE                          shift and go to state 15
    PRINTAR                        shift and go to state 16
    Decl                           shift and go to state 5

state 13
